# esp32-cam

./: CMakeLists.txt  README.md  sdkconfig.defaults
components/Common/include/: bus.h  messages.h  task_context.h
components/Dispatcher/: CMakeLists.txt  CommandDispatcher.cpp  CommandDispatcher.h
components/ESP32Cam/: CMakeLists.txt  ESP32Cam.cpp  ESP32Cam.h
components/SDCard/: CMakeLists.txt  Kconfig  README.md  SDCard.cpp  SDCard.h  idf_component.yml
components/UartAPI/: CMakeLists.txt  UartAPI.cpp  UartAPI.h
main/: CMakeLists.txt  camera_pinout.h  esp32-cam.cpp  idf_component.yml
tools/: esp32camtest.py
